# c-logger

./: CMakeLists.txt
src/: app.cpp
src/services/: example.cpp  example.h
src/utils/: log.h  logger.cpp  logger.h
